[bug #162102762] vivsible colors, content alignment and labels

--- a/css/style.css
+++ b/css/style.css
@@ -76,14 +76,17 @@ color:white;
 
 .content-slide{
 	position:absolute;
-	top:25%;
+	top:20%;
 	left:25%;
 	text-align: center;
 	z-index: 2;
 	font-size: 30px;
 	color:white;
+}
 
-
+.content-slide > p{
+	color: yellow;
+	font-size: 35px;
 }
 
 #map{
