--- a/css/style5.css
+++ b/css/style5.css
@@ -18,6 +18,10 @@
 
 }
 
+.decr{
+color: #FF9800;
+}
+
 .description{
     display:flex;
     flex-direction: row;
